<resources>
    <string name="app_name">GroupEasy</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="Not_logged_in">User not logged in</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="welcome">"Welcome to\nGroupEasy"</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="go_to_chat">Chat Room</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="google_status_fmt">Google User Name: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_my_tab">Group Easy</string>
    <string name="action_settings">About app</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">test</string>
    <string name="create_groups">Create Groups</string>
    <string name="type_message">Type a message...</string>
    <string name="create_poll">Create Poll</string>
    <string name="save">SAVE</string>
    <string name="event_name">Event Name</string>
    <string name="location">location</string>
    <string name="add_an_option">+ Add an option</string>
    <string name="log_out">Log out</string>
    <string name="new_group">New group</string>
    <string name="click_to_load">CLick to load</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="sample_text">sample text</string>
</resources>
