<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="80dp"
        android:text="@string/create_poll"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp" />

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:text="@string/save"
           android:layout_marginLeft="90dp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:textSize="33sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/location" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="#f4d9d9" />

            <TextView
                android:id="@+id/poll_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Poll options"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/po1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poll_text"
                android:layout_marginTop="5dp"
                android:hint="@string/add_an_option" />

            <EditText
                android:id="@+id/po2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/po1"
                android:layout_marginTop="5dp"
                android:hint="@string/add_an_option" />

            <EditText
                android:id="@+id/po3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/po2"
                android:layout_marginTop="5dp"
                android:hint="@string/add_an_option" />

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:backgroundTint="@color/colorAccent"
                android:scaleType="fitXY"
                android:src="@drawable/down_arrow" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="On" />

                <EditText
                    android:layout_width="192dp"
                    android:layout_height="match_parent"
                    android:hint="Fri, July 12 2017" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="At" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="4:30 PM" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:layout_marginStart="20dp"
            android:id="@+id/checkBox"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:text="Allow multiple choice"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</LinearLayout>